--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -31,3 +31,4 @@ GR_PYTHON_INSTALL(
 include(GrTest)
 
 set(GR_TEST_TARGET_DEPS gnuradio-bench)
+GR_ADD_TEST(qa_extract_burst ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_extract_burst.py)
