--- a/python/bindings/CMakeLists.txt
+++ b/python/bindings/CMakeLists.txt
@@ -29,7 +29,7 @@ include(GrPybind)
 ########################################################################
 
 list(APPEND bench_python_files
-    python_bindings.cc)
+    extract_burst_python.cc python_bindings.cc)
 
 GR_PYBIND_MAKE_OOT(bench 
    ../..
