--- a/grc/CMakeLists.txt
+++ b/grc/CMakeLists.txt
@@ -7,5 +7,8 @@
 #
 
 install(FILES
-    bench_extract_burst.block.yml DESTINATION share/gnuradio/grc/blocks
+    bench_extract_burst.block.yml
+    bench_nop.block.yml
+    bench_nop_source.block.yml
+    bench_nop_head.block.yml DESTINATION share/gnuradio/grc/blocks
 )
