--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -19,7 +19,8 @@ list(APPEND bench_sources
     sequential_validate_sink_impl.cc
     seqval_c_impl.cc
     time_tag_injector_impl.cc
-    latency_meas_sink_impl.cc )
+    latency_meas_sink_impl.cc
+    msg_forward_impl.cc )
 
 set(bench_sources "${bench_sources}" PARENT_SCOPE)
 if(NOT bench_sources)
