--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -35,3 +35,4 @@ GR_ADD_TEST(qa_extract_burst ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa
 GR_ADD_TEST(qa_random_copy ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_random_copy.py)
 GR_ADD_TEST(qa_sequential_validate_sink ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_sequential_validate_sink.py)
 GR_ADD_TEST(qa_seqval_c ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_seqval_c.py)
+GR_ADD_TEST(qa_msg_forward ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_msg_forward.py)
