copy block with configurable nproduce
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/grc/CMakeLists.txt
+++ b/grc/CMakeLists.txt
@@ -19,5 +19,6 @@ install(FILES
     bench_pdu_process.block.yml
     bench_head_null_sink.block.yml
     bench_nop_latency_source.block.yml
-    bench_head_nop_latency_sink.block.yml DESTINATION share/gnuradio/grc/blocks
+    bench_head_nop_latency_sink.block.yml
+    bench_copy.block.yml DESTINATION share/gnuradio/grc/blocks
 )
