--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -40,3 +40,4 @@ GR_ADD_TEST(qa_pdu_process ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_p
 GR_ADD_TEST(qa_head_null_sink ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_head_null_sink.py)
 GR_ADD_TEST(qa_nop_latency_source ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_nop_latency_source.py)
 GR_ADD_TEST(qa_head_nop_latency_sink ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_head_nop_latency_sink.py)
+GR_ADD_TEST(qa_copy ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_copy.py)
